--- a/src/Root/Main/index.css
+++ b/src/Root/Main/index.css
@@ -7,6 +7,10 @@ a:hover {
   color: #535bf2;
 }
 
+body {
+  margin: 0;
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
