--- a/src/Pages/ViewProducts/ViewProductsList.css
+++ b/src/Pages/ViewProducts/ViewProductsList.css
@@ -13,7 +13,7 @@
     margin-top: 16px;
 }
 
-.view-products-list .buttonGroup > Button {
+.view-products-list .buttonGroup>Button {
     margin-right: 8px;
 }
 
@@ -45,8 +45,8 @@
     line-height: normal;
 }
 
-.view-products-list .customTable .ant-table-thead > tr > th:last-child,
-.view-products-list .customTable .ant-table-tbody > tr > td:last-child {
+.view-products-list .customTable .ant-table-thead>tr>th:last-child,
+.view-products-list .customTable .ant-table-tbody>tr>td:last-child {
     width: 90px;
     text-align: center;
 }
@@ -60,8 +60,8 @@
         align-items: center;
     }
 
-    .view-products-list .customTable .ant-table-thead > tr > th:last-child,
-    .view-products-list .customTable .ant-table-tbody > tr > td:last-child {
+    .view-products-list .customTable .ant-table-thead>tr>th:last-child,
+    .view-products-list .customTable .ant-table-tbody>tr>td:last-child {
         width: 90px;
         text-align: center;
     }
@@ -81,6 +81,14 @@
 
 .view-products-list .customTable .ant-table-pagination {
     margin-right: 16px;
+}
+
+.ant-select-show-search:not(.ant-select-customize-input) .ant-select-selector {
+    cursor: pointer !important;
+}
+
+.ant-select:not(.ant-select-open) .ant-select-selector {
+    cursor: pointer !important;
 }
 
 .view-products-list .title {
