--- a/src/Pages/StockManagement/StockManagement.css
+++ b/src/Pages/StockManagement/StockManagement.css
@@ -24,7 +24,8 @@
 }
 
 .view-products-list .customTable .ant-table {
-    min-width: 550px;
+    min-width: 200px;
+    display: flex;
     width: 100%;
 }
 
@@ -53,13 +54,23 @@
 
 @media screen and (max-width: 600px) {
     .view-products-list .customTable {
-        min-width: 400px;
-        margin: 24px;
+        min-width: 200px;
+        margin: 8px;
+        left: 0;
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 0;
     }
 
+    .view-products-list .buttonGroup {
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        align-items: baseline;
+        margin-top: 16px;
+        gap: 16px;
+    }
     .view-products-list .customTable .ant-table-thead>tr>th:last-child,
     .view-products-list .customTable .ant-table-tbody>tr>td:last-child {
         width: 90px;
