--- a/src/Root/Main/index.css
+++ b/src/Root/Main/index.css
@@ -7,8 +7,18 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* Ensure maximum specificity by directly targeting the body and root id */
+html, body, #root {
+  height: 100%;
   margin: 0;
+  line-height: normal;
+  font-family: "Saira", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 200;
+    
 }
 
 /* :root {
