--- a/src/Pages/StockUpdate/StockUpdate.css
+++ b/src/Pages/StockUpdate/StockUpdate.css
@@ -7,6 +7,7 @@
 }
 
 .view-products-list .buttonGroup {
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: baseline;
