--- a/src/Root/ActionButtons/ActionButtons.module.css
+++ b/src/Root/ActionButtons/ActionButtons.module.css
@@ -1,86 +1,58 @@
 .card {
-  width: 100%;
-  height: 220px; /* Smaller height */
-  background: #171717;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0px 0px 3px 1px #00000088;
-  cursor: pointer;
-  overflow: hidden;
-  position: relative;
-}
-
-.card .content {
-  border-radius: 5px;
-  background: #171717;
-  width: 100%;
-  height: 216px; /* Adjusted for smaller card */
-  z-index: 1;
-  padding: 10px 20px; /* Adjusted padding for better spacing */
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.content::before {
-  opacity: 0;
-  transition: opacity 300ms;
-  content: " ";
-  display: block;
-  background: white;
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  filter: blur(50px);
-}
-
-.card:hover .content::before {
-  opacity: 1;
-}
-
-.card::before {
-  opacity: 0;
-  content: " ";
-  position: absolute;
-  display: block;
-  width: 120px;
-  height: 360px;
-  background: linear-gradient(
-    90deg,
-    transparent,
-    #ff2288,
-    #387ef0,
-    transparent
-  );
-  transition: opacity 300ms;
-  animation: rotation_9018 3000ms infinite linear;
-  animation-play-state: paused;
-}
-
-.card:hover::before {
-  opacity: 1;
-  animation-play-state: running;
-}
-
-.card::after {
-  position: absolute;
-  content: " ";
-  display: block;
-  width: 100%;
-  height: 254px;
-  background: #17171733;
-  backdrop-filter: blur(50px);
-}
-
-@keyframes rotation_9018 {
-  0% {
-    transform: rotate(0deg);
+    box-sizing: border-box;
+    width: 190px;
+    height: 128px;
+    background: rgba(0, 0, 0, 0.58);
+    padding: 40px;
+    box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
+    backdrop-filter: blur(6px);
+    border-radius: 17px;
+    cursor: pointer;
+    transition: all 0.5s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    user-select: none;
+    font-weight: bolder;
+    color: rgb(255, 255, 255);
+    font-family: 'Saira', sans-serif;
   }
-  100% {
-    transform: rotate(360deg);
+  
+  .card:hover {
+    border: 1px solid black;
+    transform: scale(1.05);
   }
-}
+  
+  .card:active {
+    transform: scale(0.95) rotateZ(1.7deg);
+  }
+  
+  .card:hover .menu__link::before {
+    width: 100%;
+    left: 0;
+  }
+  
+  .menu__link {
+    color: #fff;
+    line-height: 1.5;
+    position: relative;
+    margin-bottom: 10px;
+    font-size: 1em;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  .menu__link::before {
+    content: '';
+    width: 0;
+    height: 2px;
+    border-radius: 2px;
+    background-color: #fff;
+    position: absolute;
+    bottom: -5px;
+    right: 0;
+    transition: right .4s, width .4s, left .4s;
+    color: crimson;
+  }
+  
