doomsday button position updated

--- a/src/Pages/BeyondStrangelove/BeyondStrangelove.css
+++ b/src/Pages/BeyondStrangelove/BeyondStrangelove.css
@@ -1,3 +1,12 @@
+.beyond-strangelove-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%; 
+    padding: 20px;
+    margin-top: 0px;
+  }
   
   .button {
     cursor: pointer;
