--- a/src/Root/ActionButtons/ActionButtons.module.css
+++ b/src/Root/ActionButtons/ActionButtons.module.css
@@ -1,8 +1,8 @@
 .card {
     box-sizing: border-box;
-    width: 190px;
-    height: 128px;
-    background: rgba(0, 0, 0, 0.58);
+    width: 256px;
+    height: 200px;
+    background: #7A6D99;
     padding: 40px;
     box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
     backdrop-filter: blur(6px);
