--- a/src/Root/MainLayout/MainLayout.css
+++ b/src/Root/MainLayout/MainLayout.css
@@ -1,4 +1,3 @@
-/* Layout.css */
 .ant-layout-header {
   display: flex;
   justify-content: space-between;
@@ -18,6 +17,7 @@
 
 .ant-layout {
   min-height: 100vh;
+  background: transparent;
 }
 
 .ant-layout-header {
@@ -28,6 +28,7 @@
 }
 
 .ant-layout-content {
+  background: transparent;  
   padding: 0;
 }
 
